fix(frontend): removing wrong margin

--- a/src/main/webapp/app/operations/cv/cv-card.component.css
+++ b/src/main/webapp/app/operations/cv/cv-card.component.css
@@ -38,7 +38,6 @@ p {
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    margin-left: 5%;
 }
 
 .fondo {
